--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,34 @@
-== README
+== iUPB Transportation API -- draft
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A RESTful HyperMedia System by yippie.io!
 
-Things you may want to cover:
+It's a JSON API for the public busses leaving from the University of Paderborn campus.
 
-* Ruby version
+== Getting started
 
-* System dependencies
+Here’s how to get rolling:
 
-* Configuration
+=== See upcomming stops
+To see all available buildings, GET /stops.json.
+Add a limit-parameter to see only the first n results, e. g. GET /stops.json?limit=5.
 
-* Database creation
+=== Find available stations
+To see all available buildings, GET /stations.json.
+You can now filter the stops by station: /stops.json?station=StationName
 
-* Database initialization
+... 
 
-* How to run the test suite
+more to follow
 
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+...
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+== JSONP
+
+For any url, use the .jsonp extension followed by your callback, like in:
+/stations.jsonp?callback=jsonpsuccess
+
+
+== Credits
+
+part of iUPB / made by yippie.io / powered by Rails / data by VRRF (vrrf.finalrewind.org) and/or VRR
